--- a/05-samples.Rmd
+++ b/05-samples.Rmd
@@ -212,14 +212,22 @@ female_population_heights %>%
             sd = sd.pop(height))
 ```
 
-Because we rarely have access to data for an entire population we typically want to estimate the population standardized mean difference using sample data. Many researcher esimate the population standardized mean difference from sample data using the Formula \@ref(eq:samplesmdch5) below. This value is known by many other names: $d$, Cohen's $d$, and Hedges $g$. Notice that the sample-level formula below, Formula \@ref(eq:samplesmdch5), is the same as the population level formula, Formula \@ref(eq:popsmdch5), only the notation differs.
+
+INSERT CHART SUMMING UP PARAMETERS
+
+CALCULATE POP SMD
+
+
+
+
+Because we rarely have access to data for an entire population we typically want to estimate the population standardized mean difference using sample data. Many researcher esimate the population standardized mean difference from sample data using the Formula \@ref(eq:samplesmdch5) below. This value is known by many other names: $d$, Cohen's $d$, and Hedges $g$. Notice that the sample-level formula, Formula \@ref(eq:samplesmdch5), below, is the same as the population-level formula, Formula \@ref(eq:popsmdch5), above, only the notation differs.
 
 \begin{equation} 
 d  = \frac{\bar{x}_{1} - \bar{x}_{2}}{s_{pooled}} 
       (\#eq:samplesmdch5)
 \end{equation} 
 
-Unfortunately, Formula \@ref(eq:samplesmdch5) provides a biased estimate of the population standardized mean difference for small sample sizes. That is, on average, Formula \@ref(eq:samplesmdch5), provides d-values that overestimate the size of the population standardize mean difference ($\delta$).
+Unfortunately, Formula \@ref(eq:samplesmdch5) provides a biased estimate of the population standardized mean difference for small sample sizes. That is, on average, Formula \@ref(eq:samplesmdch5), provides $d$-values that overestimate the size of the population standardize mean difference ($\delta$).
 
 Fortunately, we can obtain an unbiased estimate of the population-level standardized mean difference from sample data using Formula \@ref(eq:samplesmdunbiasedch5).
 
@@ -232,9 +240,10 @@ d_{unbiased}  = \frac{\bar{x}_{1} - \bar{x}_{2}}{s_{pooled}} \times [1 - \frac{3
 If we try to apply either $d$-value formula (\@ref(eq:samplesmdch5) or \@ref(eq:samplesmdunbiasedch5)) to real data we quickly encounter a problem.  We don't have the pooled standard deviation, $s_{pooled}$
 
 ## Pooled standard deviation
-When we calculated the population-level standardized mean difference, there was only one standard deviation (i.e., only one variance). More specifically, the male and female populations both had a standard deviation but it was the same for both populations. The population-level formula for the standardized mean difference, Formula \@ref(eq:popsmdch5) has only one standard deviation in it. This is because calculation of the standardized mean difference explicitly depends on the fact the both population have the same standard deviation.
 
-Let's consider some hypothetical sample data to make the situation clear. More specifically, examine the sample-level statistics below for males and females. In particular not that we have two standard deviations -- one for males and one for females. Moreover, these two sample-level standard deviation (using $n$-1)  are not the same - they are different from each other. This initially seems problematic calculation of standardized mean difference requires that population standard deviaitons are identical. Fortunately, it's not a problem. 
+When we calculated the population-level standardized mean difference, there was only one standard deviation (i.e., only one variance). More specifically, the male and female populations both had a standard deviation but it was the same for both populations. The population-level formula for the standardized mean difference, Formula \@ref(eq:popsmdch5), has only one standard deviation in it. This is because calculation of the standardized mean difference explicitly depends on the fact the both population have the same standard deviation.
+
+Let's consider hypothetical sample data to make the situation clear. More specifically, we will examine the sample-level statistics below for males and females. Notice that we have two standard deviations -- one for males and one for females. Moreover, these two sample-level standard deviation (using $n$-1) are not the same - they are different from each other. This initially seems problematicm - calculation of standardized mean difference requires that population standard deviaitons are identical. Fortunately, this is sample-level data and not population-level data.
 
 
 $$
@@ -257,11 +266,29 @@ s_{females} &= 10 \\
 $$
 
 
-We need to recognize that the sample standard deviations are likely to differ from the population standard deviation due to sampling error. Consequently, we are likely to get two different sample standard deviations even if the population standard deviations are the same for male and females.
+We need to recognize that the sample-level standard deviations are likely to differ from the population-level standard deviation due to sampling error. Consequently, we are likely to get two different sample=level standard deviations even if the population-level standard deviations are identical for males and females.
 
-How do we resolve this situation of having two sample standard deviations? The first step is to switch to thinking in terms of variance rather than standard deviation. Due to the way the math works - life becomes very complicated very quickly if we continue to think in terms of standard deviations. Let's reframe the problem into a variance problem. Variances are preferable to standard deviations because we can add and subtract variances - but not standard deviations.
+How do we resolve this situation of having two sample-level standard deviations? The first step is to switch to thinking in terms of variance rather than standard deviation. Due to the way the math works, life becomes very complicated, very quickly, if we continue to think in terms of standard deviations. Therefore, we reframe the problem into a variance problem. Variances are preferable to standard deviations because we can add and subtract variances - but not standard deviations.
 
 We have a sample variance for males () and a sample variance for females (). We view each of these sample variances as an estimate of the respective population variances (see Figure \@ref(fig:pool1)). That is, the male sample variance is an estimate of the male population variance. Likewise, the female sample variance is an estimate of the female population variance. However, we also **assume** that the population variances for males and females are the same. Consequently, the male sample variance and the female sample variance are both estimates of a single population variance (see Figure \@ref(fig:pool2)). Because the two sample variances are estimates of the same population variance, we can (when the sample sizes are equal) simple average them to obtain a better estimate of that single population variance. When we combine the two variances together to get a better estimate of the single population variance we can that new variance the pooled variance and represent it with the symbol $s_{pooled}^2$.
+
+\newpage
+
+```{r pool1, echo=FALSE, out.width="80%", fig.scap="Estimating population variance with sample variances", fig.cap="The male sample variance (n-1) is an estimate of male population variance. Likewise, the female sample variance (n-1) is an estimate of the female population variance. "}
+knitr::include_graphics("ch_samples/images/pool1.png")
+```
+
+\vspace{25mm}
+
+```{r pool2, echo=FALSE, out.width="80%", fig.scap="Sample variances of estimates of the sample population variance.", fig.cap="We assume the population variances are the same. Therefore, the male and female sample variances are both estimates of the same population variance.", }
+knitr::include_graphics("ch_samples/images/pool2.png")
+```
+
+\newpage
+
+```{r pool3, echo=FALSE, out.width="80%", fig.scap="Pooled variance estimates population variance", fig.cap="We create a single estimate of the population variance called pooled variance ($s_{pooled}^2$). When sample sizes are equal, the pooled variance is just the average of the two sample variances (both using n-1). When the sample sizes are unequal (i.e., different numbers of males and females), we need to use a more sophisticated formula to obtain the pooled variance."}
+knitr::include_graphics("ch_samples/images/pool3.png")
+```
 
 When the sample sizes for males and females are the same (i.e., $n_{males} =n_{females}$) we can use the Formula \@ref(eq:poolvarequalch5) below to calculate the pooled variance.
 
@@ -285,11 +312,42 @@ s_{pooled}  &= \sqrt{s_{pooled}^2} \\
 \end{aligned} 
 $$
 
+If we apply the pooled standard variance, Formula \@ref(eq:poolvarch5), to the sample data:
 
-If we apply this approach to the data in our example:
+$$
+\begin{aligned}
+s_{pooled}^2 &= \frac{(n_{male} -1)s_{male}^2 + (n_{female} -1)s_{female}^2}{n_{male} + n_{female}-2} \\
+&= \frac{(10 -1)s_{male}^2 + (10 -1)s_{female}^2}{10 + 10 -2} \\
+&= -999
+\end{aligned}
+$$
+
+And then we obtain the pooled standard deviation we need, below, for the standardized mean difference formula.
+
+$$
+\begin{aligned} 
+s_{pooled}  &= \sqrt{-999} \\
+\end{aligned} 
+$$
 
 
+We calculate an unbiased estimate of the population standardize mean difference using Formula \@ref(eq:samplesmdunbiasedch5).
 
+$$
+\begin{aligned}
+d_{unbiased}  &= \frac{\bar{x}_{males} - \bar{x}_{females}}{s_{pooled}} \times [1 - \frac{3}{4(n_{males} + n_{females})-9}] \\
+&= \frac{\bar{x}_{males} - \bar{x}_{females}}{-999} \times [1 - \frac{3}{4(10 + 10)-9}] \\
+\end{aligned}
+$$
+
+
+# Variability in $d$-values
+
+* bias check using average
+
+* histogram showing enormous range of d-vaoues
+
+* min max of d showing interpretational problems
 
 
 ## Meta-analysis
