--- a/05-samples.Rmd
+++ b/05-samples.Rmd
@@ -331,7 +331,7 @@ s_{pooled}  &= \sqrt{-999} \\
 $$
 
 
-We calculate an unbiased estimate of the population standardize mean difference using Formula \@ref(eq:samplesmdunbiasedch5).
+We calculate an unbiased estimate of the population standardized mean difference using Formula \@ref(eq:samplesmdunbiasedch5).
 
 $$
 \begin{aligned}
@@ -350,11 +350,12 @@ $$
 * min max of d showing interpretational problems
 
 
-## Meta-analysis
 
 
 
 ## Overview
+
+In this chapter we have illustrated how a number of population parameter can be estimated by sample statistics. These are summarised below.
 
 \doublespacing
 
@@ -370,8 +371,10 @@ $$
 |          |     | $d_{unbiased}  = \frac{\bar{x}_{1} - \bar{x}_{2}}{s_{pooled}}  \times [1 - \frac{3}{4(n_1 + n_2)-9}]$ |
 \singlespacing
 
+## Meta-analysis
 
-Key Points
+
+## Key Points
 
 * Sample are of interest because the help use estimate attribute of the population
 
